Started on classfication

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0ee8ce2f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "f6e58de5",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "e861da12",
    "metadata": {},
    "outputs": [],
@@ -70,12 +70,12 @@
     "dataiter = iter(train)\n",
     "imgs, labels = next(dataiter)\n",
     "img_grid = torchvision.utils.make_grid(imgs)\n",
-    "#atplotlib_imshow(img_grid)"
+    "matplotlib_imshow(img_grid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ff4a7964",
    "metadata": {},
    "outputs": [],
@@ -93,59 +93,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "774116a2",
+   "execution_count": null,
+   "id": "968864a1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 11892), started 0:01:11 ago. (Use '!kill 11892' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-58ba1ac9e5e5b677\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-58ba1ac9e5e5b677\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "inception_v3 = torchvision.models.inception_v3()\n",
-    "writer = SummaryWriter(\"InceptionV3\")\n",
-    "writer.add_image(\"TinyImageNet\", img_grid)\n",
-    "writer.add_graph(inception_v3, imgs)\n",
+    "# Credit https://discuss.pytorch.org/t/how-to-add-noise-to-mnist-dataset-when-using-pytorch/59745\n",
+    "class AddGaussianNoise(object):\n",
+    "    def __init__(self, mean=0., std=1.):\n",
+    "        self.std = std\n",
+    "        self.mean = mean\n",
+    "        \n",
+    "    def __call__(self, tensor):\n",
+    "        return tensor + torch.randn(tensor.size()) * self.std + self.mean\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return self.__class__.__name__ + '(mean={0}, std={1})'.format(self.mean, self.std)\n",
+    "    \n",
     "\n",
-    "%tensorboard --logdir inceptionv3"
+    "class RobustInception(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        In the constructor we instantiate four parameters and assign them as\n",
+    "        member parameters.\n",
+    "        \"\"\"\n",
+    "        super().__init__()\n",
+    "        self.inception = torchvision.models.inception_v3(pretrained=True, feature_extract=True)\n",
+    "        self.perturb = AddGaussianNoise()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        In the forward function we accept a Tensor of input data and we must return\n",
+    "        a Tensor of output data. We can use Modules defined in the constructor as\n",
+    "        well as arbitrary operators on Tensors.\n",
+    "        \"\"\"\n",
+    "        return torch.tensor(self.inception(x), self.inception(self.perturb(x)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968864a1",
+   "id": "599f9e34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RobustInception()\n",
+    "writer = SummaryWriter(\"RobustInception\")\n",
+    "writer.add_image(\"TinyImageNet\", img_grid)\n",
+    "writer.add_graph(model, imgs)\n",
+    "\n",
+    "%tensorboard --logdir model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e856a8b",
    "metadata": {},
    "outputs": [],
    "source": []
