--- a/Model.ipynb
+++ b/Model.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "%load_ext tensorboard\n",
     "\n",
+    "import os",
     "import torch\n",
     "from torch import nn\n",
     "import torchvision\n",
@@ -18,7 +19,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os"
+    
    ]
   },
   {
