--- a/Model.ipynb
+++ b/Model.ipynb
@@ -18,7 +18,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os",
+    "import os"
    ]
   },
   {
